Restored Java 1.4 compatibility.